# pysaml2

./: .bzrignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGES  DEVELOPERS.md  Dockerfile.build  INSTALL  Jenkinsfile  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  RELEASE.md  TODO  VERSION  eptid.db  fix-xsq.diff  issue_template.md  pull_request_template.md  pyproject.toml  release-howto.rst  runtests.py  setup.cfg  setup.py  subject.db.db  tox.ini
.github/: issue_template.md  pull_request_template.md
.github/workflows/: pypi.yml  python-app.yml
doc/: Makefile  client.rst  conf.py  config.rst  howto.rst  index.rst  install.rst  make.bat  make.sh  metadata.rst  saml.rst  saml2.rst  samlp.rst  server.rst  xmldsig.rst  xmlenc.rst
doc/examples/: idp.rst  index.rst  sp.rst
doc/howto/: config.rst  idp.rst  index.rst  sp.rst
doc/sp_test/: internal.rst
docs/: conf.py  install.rst
docs/examples/: idp.rst
docs/howto/: config.rst  index.rst
docs/sp_test/: internal.rst
example/: .gitignore  README  all.sh  attributemaps  create_key.sh  metadata.xml  requirements.txt  run.sh
example/attributemaps/: adfs_v1x.py  saml_uri.py
example/idp/: README  idp.app.py  idp.conf  idp.py  idp.xml  idp_conf.py  idp_conf.py.example  idp_user.ini  metadata.xml  passwd  pki  who.ini
example/idp2/: idp.py  idp.xml  idp_conf.py  idp_conf.py.example  idp_user.py  idp_uwsgi.py
example/idp2_repoze/: idp.py  idp_conf.py.example
example/sp/: application.py  attributemaps  sp.conf  sp.py  sp.xml  sp_conf.py  sp_conf.py.example  who.ini
example/sp-repoze/: sp.py  sp.xml  sp_conf.example  sp_conf.py  sp_conf.py.example  who.ini
example/sp-wsgi/: conf.py  service_conf.py  service_conf.py.example  sp.py  sp.xml  sp_conf.py.example
fake-tests/: test_import.py
script/: saml2c.py  sp_testdrv.py
script/utility/: filter_testcase_ids.py  run_list_of_tests.py
src/: __init__.py  rrtest
src/djangosaml2/: __init__.py  backends.py  urls.py  views.py
src/idp_test/: __init__.py  authn_request_test.py  base.py  check.py  httpreq.py  interaction.py  operations.py  saml2base.py  saml2int.py  test.py  tmp.py
src/rrtest/: __init__.py  check.py  interaction.py  tool.py
src/s2repoze/: __init__.py
src/saml2/: __init__.py  aes.py  algsupport.py  argtree.py  assertion.py  attribute_converter.py  attribute_resolver.py  authn.py  authnresponse.py  binding.py  cache.py  cert.py  cipher.py  client.py  client_base.py  compat.py  config.py  conftest.py  country_codes.py  discovery.py  ds_test_data.py  ecp.py  ecp_client.py  encdec.py  entity.py  eptid.py  errors.py  filter.py  httpbase.py  httplib2cookie.py  httputil.py  ident.py  idpdisc.py  mcache.py  md.py  md_test_data.py  mdbcache.py  mdie.py  mdstore.py  mdui.py  (+27 more)
src/saml2_tophat/: __init__.py  aes.py  algsupport.py  assertion.py  attribute_converter.py  attribute_resolver.py  authn.py  cache.py  cert.py  client.py  client_base.py  config.py  discovery.py  ecp.py  ecp_client.py  entity.py  httpbase.py  httputil.py  ident.py  mcache.py  md.py  mdbcache.py  mdie.py  mdstore.py  metadata.py  mongo_store.py  pack.py  population.py  request.py  response.py  (+10 more)
tests/: InCommon-metadata.xml  _test_80_p11_backend.py  aa_conf.py  attribute.map  attribute_response.xml  attribute_statement_data.py  config_file.py  conftest.py  disco_conf.py  ds_data.py  ds_test.py  ecp_soap.xml  edugain.pem  enc_tmpl.xml  encrypted_attribute_statement.xml  entity_cat_re.xml  entity_cat_re_nren.xml  entity_cat_rs.xml  entity_cat_sfs_hei.xml  entity_esi_and_coco_sp.xml  entity_no_friendly_name_sp.xml  entity_personalized_sp.xml  extended.xml  fakeIDP.py  get_metadata.sh  idp.config  idp.xml  idp_aa.xml  idp_all.xml  idp_all_conf.py  idp_conf.py  idp_conf_ec.py  idp_conf_mdb.py  idp_conf_mdb2.py  idp_conf_sp_no_encrypt.py  idp_conf_verify_cert.py  idp_example.xml  idp_slo_redirect.conf  idp_slo_redirect.xml  idp_slo_redirect_conf.py  (+162 more)
tools/: cron.py  make_metadata.py  mdexport.py  mdexport_test.py  mdimport.py  merge_metadata.py  parse_xsd2.py  sync_attrmaps.py  update_metadata.sh  verify_metadata.py
(+222 files in other folders)
